<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search"> Search</string>
    <string name="about"> About </string>
    <string name="type_here">Search for City</string>
    <string name="pref_show_weather_near_me">Show Weather near me.</string>
    <string name="pref_city_name"> Set City </string>
    <string name="pref_show">Appearance</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="please_wait">Sorry, no weather data found.&#8230;</string>
    <string name="movie_image"> Weather Image</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="openweather_api_key">a7662fc64142a9aa42bb45916378b353</string>
    <string name="gps_network_not_enabled" > The GPS is not enable</string>
    <string name="open_location_settings" > Enable GPS </string>
    <string name="cancel" > Cancel </string>
    <string name="created_by">Created By Michael</string>
    <string name="info">A Simple Weather Forecast Application for demonstration purposes</string>
</resources>
